maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:16: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:23: error: Unmatched closing brace '}' ignored here
}
^